[package]
name = "grrs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17.8"
rand = "0.8"
log = "0.4.22"
clap-verbosity-flag = "2.2.2"
env_logger = "0.11.5"
assert_cmd = "2.0.14"
predicates = "3.1.0"
assert_fs = "1.1.2"
